# lmccl

./: .gitignore  build.zig  build.zig.zon
csample/: CMakeLists.txt  README.org
csample/include/: nccl.h
csample/src/: nccl.c  sleep.cu
src/: main.zig  root.zig
